hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_getName_basic.php
<?php
$obj = new ReflectionExtension('reflection');
var_dump($obj->getName());
?>
==DONE==
